[package]
name = "gauss"
version = "0.1.0"
authors = ["Aidan <agoldfa7@u.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
threadpool = "1.8.1"
threadpool-crossbeam = {path = "/home/aidan/Spring2021/CS258/Gaussian/rust/util/threadpool_crossbeam"}

